--- a/template/chat.ejs
+++ b/template/chat.ejs
@@ -1,6 +1,6 @@
-<% layout('layout/page') -%>
+﻿<% layout('layout/page') -%>
 <% block('title', "Чат") -%>
 
 <p class="lead">Здесь будет чат.</p>
-
-<p>Добро пожаловать, <%=user.get('username')%></p>
+ 
+<p>Добро пожаловать, <a href="/profile"><%=user.get('username')%></a>></p>
