adding competitions admin link

--- a/template/partials/topNavigation.ejs
+++ b/template/partials/topNavigation.ejs
@@ -4,6 +4,11 @@
     <% if (user) { %>
     <li><a href="/chat">Чат</a></li>
     <% } %>
+
+    <% if (user) { %>
+    <li><a href="/competitions">Соревнования</a></li>
+    <% } %>
+
   </ul>
   <ul class="nav navbar-nav navbar-right">
     <% if (user) { %>
