--- a/template/profile.ejs
+++ b/template/profile.ejs
@@ -57,6 +57,32 @@
       </div>
       <div class="modal-body">
         
+
+
+
+<form class="form-horizontal profile-update" action="/auth/login" method="POST" name="profile-update">
+  <div class="form-group">
+    <label for="input-sichip" class="col-lg-2 control-label">sichip</label>
+
+    <div class="col-lg-10">
+      <input name="sichip" value="name" type="text" class="form-control" id="input-sichip" placeholder="Имя">
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <button type="submit" class="btn btn-primary" data-loading-text="Отправляю...">Тест</button>
+      <span class="help-block error"></span>
+    </div>
+  </div>
+</form>
+
+
+
+
+
+
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -65,3 +91,20 @@
     </div>
   </div>
 </div>
+
+
+<script>
+  $(document.forms['profile-update']).on('submit', function() {
+    var form = $(this);
+
+    $.ajax({
+      url: "/updateProfile",
+      method: "POST",
+      data: form.serialize()
+    })
+    .done(function(data){
+    	console.log(data);
+    });
+    return false;
+  });
+</script>
