add user login and first name fields
change user fields required property.

--- a/template/chat.ejs
+++ b/template/chat.ejs
@@ -3,4 +3,4 @@
 
 <p class="lead">Здесь будет чат.</p>
  
-<p>Добро пожаловать, <a href="/profile"><%=user.get('username')%></a>></p>
+<p>Добро пожаловать, <a href="/profile"><%=user.get('login')%></a>></p>
