--- a/template/layout/page.ejs
+++ b/template/layout/page.ejs
@@ -8,6 +8,8 @@
 
   <script src="/vendor/bower_components/jquery/jquery.js"></script>
   <script src="/vendor/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
+  <script src="/js/requestService.js"></script>
 </head>
 <body>
 <header>
