--- a/template/login.ejs
+++ b/template/login.ejs
@@ -5,10 +5,10 @@
 
 <form class="form-horizontal login-form" action="/auth/login" method="POST" name="login-form">
   <div class="form-group">
-    <label for="input-username" class="col-lg-2 control-label">Имя</label>
+    <label for="input-login" class="col-lg-2 control-label">Имя</label>
 
     <div class="col-lg-10">
-      <input name="username" value="name" type="text" class="form-control" id="input-username" placeholder="Имя">
+      <input name="login" value="name" type="text" class="form-control" id="input-login" placeholder="Имя">
     </div>
   </div>
   <div class="form-group">
