adding fields for update

--- a/template/profile.ejs
+++ b/template/profile.ejs
@@ -59,57 +59,57 @@
 
 <form class="form-horizontal profile-update" action="/auth/login" method="POST" name="profile-update">
   <div class="form-group">
-    <label for="input-username" class="col-lg-2 control-label">Name</label>
+    <label for="input-firstname" class="col-lg-4 control-label">Fisrst name</label>
 
-    <div class="col-lg-10">
-      <input name="username" value="name" type="text" class="form-control" id="input-username" placeholder="Имя">
+    <div class="col-lg-8">
+      <input name="username" value="name" type="text" class="form-control" id="input-firstname" placeholder="Имя">
     </div>
   </div>
   <div class="form-group">
-    <label for="input-lastname" class="col-lg-2 control-label">Last Name</label>
+    <label for="input-lastname" class="col-lg-4 control-label">Last Name</label>
 
-    <div class="col-lg-10">
+    <div class="col-lg-8">
       <input name="lastname" value="name" type="text" class="form-control" id="input-lastname" placeholder="Имя">
     </div>
   </div>
   <div class="form-group">
-    <label for="input-birthday" class="col-lg-2 control-label">Birthday</label>
+    <label for="input-birthday" class="col-lg-4 control-label">Birthday</label>
 
-    <div class="col-lg-10">
+    <div class="col-lg-8">
       <input name="birthday" value="name" type="text" class="form-control" id="input-birthday" placeholder="Имя">
     </div>
   </div>
   <div class="form-group">
-    <label for="input-club" class="col-lg-2 control-label">Club</label>
+    <label for="input-club" class="col-lg-4 control-label">Club</label>
 
-    <div class="col-lg-10">
+    <div class="col-lg-8">
       <input name="club" value="name" type="text" class="form-control" id="input-club" placeholder="Имя">
     </div>
   </div>
   <div class="form-group">
-    <label for="input-role" class="col-lg-2 control-label">Role</label>
+    <label for="input-role" class="col-lg-4 control-label">Role</label>
 
-    <div class="col-lg-10">
+    <div class="col-lg-8">
       <input name="role" value="name" type="text" class="form-control" id="input-role" placeholder="Имя">
     </div>
   </div>
   <div class="form-group">
-    <label for="input-rank" class="col-lg-2 control-label">Rank</label>
+    <label for="input-rank" class="col-lg-4 control-label">Rank</label>
 
-    <div class="col-lg-10">
+    <div class="col-lg-8">
       <input name="rank" value="name" type="text" class="form-control" id="input-rank" placeholder="Имя">
     </div>
   </div>
     <div class="form-group">
-    <label for="input-sichip" class="col-lg-2 control-label">Si-chip</label>
+    <label for="input-sichip" class="col-lg-4 control-label">Si-chip</label>
 
-    <div class="col-lg-10">
+    <div class="col-lg-8">
       <input name="sichip" value="name" type="text" class="form-control" id="input-sichip" placeholder="Имя">
     </div>
   </div>
   
   <div class="form-group">
-    <div class="col-lg-offset-2 col-lg-10">
+    <div class="col-lg-offset-2 col-lg-8">
       <button type="submit" class="btn btn-primary" data-loading-text="Отправляю...">Тест</button>
       <span class="help-block error"></span>
     </div>
