fix missing input field name

--- a/template/profile.ejs
+++ b/template/profile.ejs
@@ -62,7 +62,7 @@
     <label for="input-firstname" class="col-lg-4 control-label">Fisrst name</label>
 
     <div class="col-lg-8">
-      <input name="username" value="name" type="text" class="form-control" id="input-firstname" placeholder="Имя">
+      <input name="firstname" value="name" type="text" class="form-control" id="input-firstname" placeholder="Имя">
     </div>
   </div>
   <div class="form-group">
