--- a/template/partials/topNavigation.ejs
+++ b/template/partials/topNavigation.ejs
@@ -1,20 +1,19 @@
 <nav class="navbar navbar-default" role="navigation">
-  <ul class="nav navbar-nav">
-    <li><a href="/">Главная</a></li>
-    <% if (user) { %>
-    <li><a href="/chat">Чат</a></li>
-    <% } %>
+  <div class="container-fluid">
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="/competitions">Соревнования</a></li>
+      </ul>
 
-    <% if (user) { %>
-    <li><a href="/competitions">Соревнования</a></li>
-    <% } %>
-
-  </ul>
-  <ul class="nav navbar-nav navbar-right">
-    <% if (user) { %>
-    <li><a href="" onclick="$('<form method=POST action=/logout>').submit();return false">Выйти</a></form></li>
-    <% } else { %>
-    <li><a href="/login">Войти</a></li>
-    <% } %>
-  </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if (user) { %>
+          <li><a href="/profile"><%=user.get('login')%></a></li>
+          <li><a href="" onclick="$('<form method=POST action=/logout>').submit();return false">Выйти</a></form></li>
+        <% } else { %>
+          <li><a href="/login">Войти</a></li>
+        <% } %>
+      </ul>
+    </div>
+  </div>
 </nav>
