--- a/template/profile.ejs
+++ b/template/profile.ejs
@@ -75,15 +75,13 @@
   <div class="form-group">
     <label for="input-birthday" class="col-lg-4 control-label">Birthday</label>
   <div class="col-lg-8">
-       <div class='input-group date' id='datetimepicker1'>
-                    <input type='text' class="form-control" />
+       <div class='input-group date' >
+                    <input type='text' class="form-control" id='datetimepicker1'/>
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                     </span>
                 </div>
 <script type="text/javascript">
-            $(function () {
-                $('#datetimepicker1').datetimepicker();
-            });
+            $('#datetimepicker1').datepicker();
         </script>
   </div>      
   </div>
