--- a/template/profile.ejs
+++ b/template/profile.ejs
@@ -41,7 +41,7 @@
 			</tr>
 		</table> 
 </div>
-	<!-- Modal -->
+<!-- Modal -->
 
 	
 </form>
@@ -75,14 +75,11 @@
   <div class="form-group">
     <label for="input-birthday" class="col-lg-4 control-label">Birthday</label>
   <div class="col-lg-8">
-       <div class='input-group date' >
-                    <input type='text' class="form-control" id='datetimepicker1'/>
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
-<script type="text/javascript">
-            $('#datetimepicker1').datepicker();
-        </script>
+      <div class='input-group date'>
+        <input  type="text" class="form-control" placeholder="click to show datepicker" id="input-birthday">
+        <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
+        </span>
+      </div>
   </div>      
   </div>
   <div class="form-group">
@@ -122,12 +119,6 @@
   </div>
 </form>
 
-
-
-
-
-
-
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -139,6 +130,13 @@
 
 
 <script>
+
+$(document).ready(function () {
+                $('#input-birthday').datepicker({
+                    format: "dd/mm/yyyy"
+                });  
+            });
+
   $(document.forms['profile-update']).on('submit', function() {
     var form = $(this);
 
