--- a/template/profile.ejs
+++ b/template/profile.ejs
@@ -111,19 +111,17 @@
     </div>
   </div>
   
-  <div class="form-group">
-    <div class="col-lg-offset-2 col-lg-8">
-      <button type="submit" class="btn btn-primary" data-loading-text="Отправляю...">Тест</button>
-      <span class="help-block error"></span>
-    </div>
-  </div>
-</form>
+  
+
 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+       
+         <button type="submit" class="btn btn-primary" data-loading-text="Отправляю..." data-dismiss="modal">Save changes</button>
+      <span class="help-block error"></span>
       </div>
+ </form>     
     </div>
   </div>
 </div>
