login page added

--- a/public/views/competitions/content.html
+++ b/public/views/competitions/content.html
@@ -7,10 +7,10 @@
 				<table class="table table-condensed table-hover">
 					<thead>
 						<tr>
-							<th data-i18n="compets.startDate"></th>
-							<th data-i18n="compets.name"></th>
-							<th data-i18n="compets.place"></th>
-							<th data-i18n="compets.descr"></th>
+							<th>№</th>
+							<th>Название</th>
+							<th>Место</th>
+							<th>Описание</th>
 							<th></th>
 						</tr>
 					</thead>
