--- a/public/views/include/menu.html
+++ b/public/views/include/menu.html
@@ -7,7 +7,7 @@
 				<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span>
 				<span class="icon-bar"></span> <span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="">Registration</a>
+			<a class="navbar-brand" href="">Кронан</a>
 		</div>
 	
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -22,6 +22,12 @@
 						<li><a href="" ng-click="changeLocal('en'); refresh();" data-i18n="navbar.en">Eng</a></li>
 						<li><a href="" ng-click="changeLocal('ru'); refresh();" data-i18n="navbar.ru">Рус</a></li>
 					</ul>
+				</li>
+				<li ng-show="!isLoggined()">
+					<a href="" ng-click="redirectToLogin()">Войти</a>
+				</li>
+				<li ng-show="isLoggined()">
+					<a href="" ng-click="logout()">Выйти</a>
 				</li>
 			</ul>
 		</div>
