--- a/public/views/include/menu.html
+++ b/public/views/include/menu.html
@@ -12,7 +12,7 @@
 	
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li><a href="" ng-click="competitionURL()" data-i18n="navbar.vacations">Соревнования</a></li>
+				<li><a href="" ng-click="competitionURL()">Соревнования</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown"><a href="#" class="dropdown-toggle"
