simple subscribe button

--- a/public/views/competitions/content.html
+++ b/public/views/competitions/content.html
@@ -21,6 +21,9 @@
 							</td>
 							<td>{{cmp.place}}</td>
 							<td>{{cmp.description}}</td>
+							<td>
+								<button type="button" class="btn btn-xs btn-success">Участвовать</button>
+							</td>
 						</tr>
 						<tr ng-show="isPaginationRendered()" class="tablePaginator">
 							<td colspan="8" align="center">
