--- a/public/views/include/menu.html
+++ b/public/views/include/menu.html
@@ -15,18 +15,21 @@
 				<li><a href="" ng-click="competitionURL()">Соревнования</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown"><a href="#" class="dropdown-toggle"
-					data-toggle="dropdown" data-i18n="navbar.language"> Язык
-						<b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li><a href="" ng-click="changeLocal('en'); refresh();" data-i18n="navbar.en">Eng</a></li>
-						<li><a href="" ng-click="changeLocal('ru'); refresh();" data-i18n="navbar.ru">Рус</a></li>
-					</ul>
-				</li>
 				<li ng-show="!isLoggined()">
-					<a href="" ng-click="redirectToLogin()">Войти</a>
+					<form class="form-inline" role="form">
+					  <div class="form-group">
+					    <label class="sr-only" for="exampleInputEmail2">Почта</label>
+					    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="email">
+					  </div>
+					  <div class="form-group">
+					    <label class="sr-only" for="exampleInputPassword2">Пароль</label>
+					    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="пароль">
+					  </div>
+					  <button type="submit" class="btn btn-default" ng-click="login()">войти</button>
+					</form>
 				</li>
 				<li ng-show="isLoggined()">
+					<a href="" ng-click="showProfile()" value="getLogin()"></a>
 					<a href="" ng-click="logout()">Выйти</a>
 				</li>
 			</ul>
