--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -50,3 +50,8 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
     padding: 9px;
 }
+
+.form-styling {
+	margin-top: 7px;
+	margin-right: 12px;
+}
