--- a/public/views/include/menu.html
+++ b/public/views/include/menu.html
@@ -16,14 +16,14 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li ng-show="!isLoggined()">
-					<form class="form-inline" role="form">
+					<form class="form-inline form-styling" role="form">
 					  <div class="form-group">
-					    <label class="sr-only" for="exampleInputEmail2">Почта</label>
-					    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="email">
+					    <label class="sr-only" for="inputEmail">Почта</label>
+					    <input type="email" class="form-control" id="inputEmail" placeholder="email">
 					  </div>
 					  <div class="form-group">
-					    <label class="sr-only" for="exampleInputPassword2">Пароль</label>
-					    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="пароль">
+					    <label class="sr-only" for="inputPassword">Пароль</label>
+					    <input type="password" class="form-control" id="inputPassword" placeholder="пароль">
 					  </div>
 					  <button type="submit" class="btn btn-default" ng-click="login()">войти</button>
 					</form>
