--- a/public/views/include/menu.html
+++ b/public/views/include/menu.html
@@ -19,7 +19,7 @@
 					<form class="form-inline form-styling" role="form">
 					  <div class="form-group">
 					    <label class="sr-only" for="inputEmail">Почта</label>
-					    <input type="email" class="form-control" id="inputEmail" placeholder="email">
+					    <input type="input" class="form-control" id="inputEmail" placeholder="email">
 					  </div>
 					  <div class="form-group">
 					    <label class="sr-only" for="inputPassword">Пароль</label>
@@ -29,7 +29,6 @@
 					</form>
 				</li>
 				<li ng-show="isLoggined()">
-					<a href="" ng-click="showProfile()" value="getLogin()"></a>
 					<a href="" ng-click="logout()">Выйти</a>
 				</li>
 			</ul>
